2011-01-07 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.58
	* added OSTYPE function to return the type of OS this was compiled

2011-01-06 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.57 (473)
	* added IMPLODE to change an array to a string
	* updated Russian translation

2011-01-05 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.56 (469)
	* added INSTRX() to return position of a Regular Expression
	* added REPLACEX() function to find an regular expression and replace with a string
	* added COUNTX() function to retuen number of occourances of a regular expression
	* added EXPLODEX() function to split a string into a string or numeric array on a regular expression

2011-01-03 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.55 (468)
	* allow assignment of indirect list of values {} to redimision an array to the correct size
	* added two optional arguments to INSTR() - Start and IgnoreCase
	* added Unicode safe string REPLACE() function
	* added Unicode safe substring count COUNT() function
	* added EXPLODE() function to split a string into a string or numeric array

2011-01-02 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.54 (467)
	* added dir() function

2010-12-31 sergey irupin <lamp@altlinux.org> 0.9.6.53 (466)
	* add offline help system
	* replace About window
	* fixed highlighting of keywords

2010-12-13 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.53 (452)
	* changed variables object to use a map for storage and not a static array - in preparation for some day handling run levels

2010-12-12 j.m.reneau <renejm@users.sourceforge.net> 0.9.6.52 (451)
	* moved variables out of interperter into a new object in preparation for some day adding multiple run levels to handle true functions and subroutines
	* also celeaned up several variable related memory leaks

2010-12-10 sergey irupin <lamp@altlinux.org> 0.9.6.51 (449)
	* add 2 mathematics functions - sqr()/sqrt(), exp()

2010-11-26 sergey irupin <lamp@altlinux.org> 0.9.6.50 (448)